--- a/src/Logo/Logo.module.css
+++ b/src/Logo/Logo.module.css
@@ -1,18 +1,4 @@
-.Logo {
-    animation: Logo-spin infinite 20s linear;
-    height: 40vmin;
-}
-
 .Logo img {
-    height: 100%;
+    height: 40px;
 }
 
-
-@keyframes Logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
