➕ eslint ⬆️ react react-script craco :rotating_light: eslint warning

--- a/src/Logo/Logo.module.css
+++ b/src/Logo/Logo.module.css
@@ -1,3 +1,9 @@
+.Logo {
+    border: none;
+    background-color: transparent;
+    margin: 0;
+    padding: 0;
+}
 .Logo img {
     height: 40px;
 }
