--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ code {
   display: flex;
   justify-content: space-between;
 }
+
+.button .icon {
+  margin: 0 5px;
+}
+
 .border-top {
   padding-top: 14px;
   border-top: 1px solid rgb(212, 212, 213);
